overflow solved

--- a/public/main.css
+++ b/public/main.css
@@ -15,6 +15,7 @@ html, body {
 }
 
 .text-editor {
+    overflow: auto;
     flex: 1;
     padding: 30px;
     border: 0px;
@@ -30,6 +31,7 @@ html, body {
 }
 
 .preview {
+    overflow: auto;
     flex: 1;
     padding: 0 50px;
     background: #2d2d2d;
